--- a/styles.css
+++ b/styles.css
@@ -187,5 +187,90 @@ margin-left: 5%;
 
 @media all  and (min-width:480px) and (max-width: 992px){
 
+    .topbar{
+        display: flex;
+        background-color: rgb(56, 121, 56);
+        flex-direction: column;
+        justify-content: space-between;
+        color: whitesmoke;
+        height: 50px;
+    
+    }
+
+
+    .menu{
+        display: flex;
+        flex-direction: column;
+        color:black;
+        align-items: flex-start;
+        gap: 10px;
+        margin-top: 1%;
+        margin-left: 0%;
+    
+    }
+
+
+
+.be-stylish{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+    
+    
+
+#bestylish{
+    font-size: 20px;
+    font-weight: bolder;
+}
+
+.midnavbar{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    margin-top: 2%;
+    gap: 10px;
+    
+}
+
+
+.Modern-Design{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-left: 2%;
+    gap: 10px;
+}
+
+
+.midnavbar{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    margin-top: 5%;
+    gap: 10px;
+    justify-content: flex-start;
+}
+
+.cottonpolyester{
+    display: flex;
+    flex-direction: column;
+    justify-content:flex-start;
+    align-items: left;
+    gap: 20px;
+    margin-left: 2%;
+    
+    }
+
+    #image{
+        width: 100px;
+        margin-right: 0%;
+    }
+
+    body{
+        margin: 0;
+        width: 100px;
+        padding: 0;
+    }
 
 }
