--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,22 @@
 
 }
 
+#navicons{
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    float: right;
+    margin-top: 0%;
+}
+
+#Bemins{
+    font-weight: bolder;
+}
+
+
+#cap{
+    margin-top: 0%;
+}
 
 #link1{
     text-decoration: none;
@@ -47,11 +63,23 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    margin-top: 5%;
+    margin-left: 20%;
 }
 
 #bestylish{
-    font-size: 40px;
+    font-size: 50px;
+    width: 400px;
+    font-weight: bold;
+    margin-left: 20%;
+
+}
+
+#shopnow1{
+    color: rgb(56, 47, 47);
     font-weight: bolder;
+    margin-left: 20%;
+
 }
 
 #shopnow{
